# FastapiTemplateStudy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  requirements-dev.txt  requirements.txt
app/: main.py
app/db/: database.py
app/db/sql/: creates.mysql  creates.postgres  init.mysql  inserts.mysql  inserts.postgres
app/models/: courses.py
app/routers/: courses.py
app/schemas/: courses.py
app/shared/: constants.py  dependencies.py
cli/: pyproject.toml
cli/cli/: main.py
migration/: env.py
migration/versions/: 46a934710229_create_first_table.py
tests/: __init__.py  mocks.py  test_courses.py  test_main.py
