[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Juan Quintero <juanestquintero@gmail.com>"]
readme = "README.rst"

[tool.poetry.scripts]
app-cli = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
